--- a/packages/formstr-app/package.json
+++ b/packages/formstr-app/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@formstr/web-app",
   "version": "0.1.0",
-  "homepage": "https://formstr.app",
+  "license": "unlicense",
+  "homepage": "https://bitkarrot.github.io/nostr-forms",
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "@babel/core": "^7.16.0",
