factor our base urls into .env and other values

--- a/packages/formstr-app/.env
+++ b/packages/formstr-app/.env
@@ -2,3 +2,11 @@ GENERATE_SOURCEMAP=false
 throwIfNamespace= false
 TSC_COMPILE_ON_ERROR=false
 DISABLE_ESLINT_PLUGIN=true
+
+# Base URL for production deployment
+# For local development, this is ignored and the app is served at http://localhost:3000
+# For GitHub Pages deployment, this is used to construct absolute URLs
+REACT_APP_BASE_URL=https://bitkarrot.github.io/nostr-forms
+
+# Set to true for local development, false for production
+REACT_APP_IS_LOCAL=true
