--- a/packages/formstr-app/package.json
+++ b/packages/formstr-app/package.json
@@ -2,7 +2,7 @@
   "name": "@formstr/web-app",
   "version": "0.1.0",
   "license": "unlicense",
-  "homepage": ".",
+  "homepage": "https://bitkarrot.github.io/nostr-forms",
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "@babel/core": "^7.16.0",
@@ -166,6 +166,5 @@
     "presets": [
       "react-app"
     ]
-  },
-  "proxy": "http://localhost:3001"
+  }
 }
